Remove _strict_ warnings